[project]
name = "ctf_ssh_test_build"
version = "0.0.1"
requires-python = ">= 3.11"

[build-system]
requires = ["setuptools >= 77.0.3", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
ext-modules = [
  {name = "poskaship_pb2", sources = ["/lib/poskaship_pb2.cpython-311-x86_64-linux-gnu.so"]},
  {name = "grpc", sources = ["/lib/poskaship_pb2_grpc.cpython-311-x86_64-linux-gnu.so"]},
  {name = "client", sources = ["/lib/client.cpython-311-x86_64-linux-gnu.so"]},
  {name = "common", sources = ["/lib/common.cpython-311-x86_64-linux-gnu.so"]},
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
build1 = ["*.so"]

